--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,9 @@
     <string name="describe_your_mood">حالتو توصیف کن</string>
     <string name="error_phone_number_not_valid">شماره همراه را به درستی وارد کنید</string>
     <string name="notifications">هشدارها</string>
+    <string name="select_profile_picture">انتخاب تصویر پروفایل</string>
+    <string name="take_new_photo">گرفتن عکس جدید</string>
+    <string name="choose_from_gallery">انتخاب از گالری</string>
+    <string name="delete_photo">حذف عکس</string>
 
 </resources>
